Fix tutorial parts list having excess whitespace.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -34,7 +34,7 @@
   background-position: 50% 50%;
 }
 
-.featured-image, .content, .tag.labels {
+.featured-image, .main-content, .tag.labels {
   margin-top: 1em;
 }
 
